# Copyright 2021 System76 <info@system76.com>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "pop-tiler-service"
description = "Simple drop-in microservice for integrating with pop-tiler"
version = "0.1.0"
license = "MPL-2.0"
edition = "2018"

[features]
ipc = ["serde"]

[dependencies]
async-channel = "1"
thiserror = "1"
ghost-cell = "0.2"
pop-tiler = { path = "../" }
futures-lite = "1"
async-io = "1"
async-oneshot = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
glib = "0.14"
