[package]
name = "pop-tiler-service"
description = "Simple drop-in microservice for integrating with pop-tiler"
version = "0.1.0"
license = "LGPL-3.0-only"
edition = "2018"

[dependencies]
async-channel = "1.6.1"
thiserror = "1.0.28"
ghost-cell = "0.2"
pop-tiler = { path = "../" }
futures-lite = "1.12.0"
async-io = "1.6.0"
blocking = "1.0.2"
async-oneshot = "0.5.0"

[dev-dependencies]
glib = "0.14.5"
gtk = "0.14.1"
